0.02
 - Add .travis.yml file.
 - Add test comments.
 - Improve SYNOPSIS section in doc.
 - Update Module::Install to 1.19 version.
 - Update author name.
 - Update copyright years.
 - Update examples/ directory.

0.01 2016-04-20T16:40:33+02:00
 - First version.