@@ -637,8 +637,9 @@ L<http://skim.cz>
 
 =head1 LICENSE AND COPYRIGHT
 
- © Michal Josef Špaček 2005-2021
- BSD 2-Clause License
+© Michal Josef Špaček 2005-2021
+
+BSD 2-Clause License
 
 =head1 VERSION
 
