@@ -231,8 +231,9 @@ AUTHOR
     <http://skim.cz>
 
 LICENSE AND COPYRIGHT
-     © Michal Josef Špaček 2005-2021
-     BSD 2-Clause License
+    © Michal Josef Špaček 2005-2021
+
+    BSD 2-Clause License
 
 VERSION
     0.02
