@@ -1,6 +1,7 @@
 0.02
  - Add .travis.yml file.
  - Add test comments.
+ - Improve LICENSE AND COPYRIGHT section in doc.
  - Improve SYNOPSIS section in doc.
  - Update Module::Install to 1.19 version.
  - Update author name.
